--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -24,14 +24,13 @@ cl_particles_forcetraileffects 1
 
 alias dropweapon "impulse 17"
 
+// support for servers still using the old centreprint MOTD
 alias +show_info0 "+button7"
 alias -show_info0 "-button7"
 alias +show_info1 "menu_showwelcomedialog"
 alias -show_info1 ""
-
-seta cl_welcome_in_menu_dialog 1 "1: show the welcome message in a dedicated menu dialog; 0: show it as a centerprint message"
-alias +show_info +show_info$cl_welcome_in_menu_dialog
-alias -show_info -show_info$cl_welcome_in_menu_dialog
+alias +show_info +show_info$_menu_welcome_dialog_available
+alias -show_info -show_info$_menu_welcome_dialog_available
 
 // merge lightmaps up to 2048x2048 textures
 mod_q3bsp_lightmapmergepower 4
