Increase Xonotic version to 0.8.5
Also update version compatibility policy:
DisableServerBackwardsCompatibility() is removed, allowing 0.9.0 to join
servers running the last 0.8.x release.
Instead the general policy is to support the previous release on a
"best effort" basis.

Also some minor cleanups for gameversion cvars.

--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -7,7 +7,8 @@
 
 // Xonotic version (formatted for machines)
 // used to determine if a client version is compatible
-// this doesn't have to be bumped with every release
+// general policy: previous release has "best effort" support, older releases are unsupported,
+// but gameversion_min doesn't have to be bumped with every release
 // bump when clients become incompatible or any other perfectly good reason
 // (e.g. game data incompatibility, engine version incompatibility, etc
 // note: this automatically filters the server browser, clients of the new
@@ -17,9 +18,9 @@
 // e.g. Xonotic 1.5.1 RC1 will be 15101
 set g_xonoticversion git "Xonotic version (formatted for humans)"
 
-gameversion 802 // 0.8.2
-gameversion_min 0 // git builds see all versions
-gameversion_max 65535 // git builds see all versions
+gameversion 805       // 0.8.5
+gameversion_min 802   // 0.8.2 is the previous release
+gameversion_max 65535 // future versions should nag players to update
 
 // compatibility guideline:
 //   version a.b.c   = a0b0c
