--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -367,6 +367,7 @@ set sv_vote_gametype_options "dm tdm ca ctf" "identifiers of gamemodes on the vo
 set sv_vote_gametype_timeout 20 "how long the gametype vote screen lasts"
 set sv_vote_gametype_default_current 1 "Keep the current gametype if no one votes"
 
+set g_chat_allowed 1 "allow players to communicate via in-game chat"
 set g_chat_flood_spl 3 "normal chat: seconds between lines to not count as flooding"
 set g_chat_flood_lmax 2 "normal chat: maximum number of lines per chat message at once"
 set g_chat_flood_burst 2 "normal chat: allow bursts of so many chat lines"
