Change map support cvar to allow Keepaway maps to be played in Team Keepaway rather than Deathmatch maps, enable by default Add a separate cvar to allow Team Deathmatch maps to be played in Team Keepaway, disabled by default

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -574,7 +574,8 @@ set g_duel_not_dm_maps 0 "when this is set, DM maps will NOT be listed in duel"
 //  team keepaway
 // ===============
 set g_tka 0 "another game mode which focuses around a ball"
-set g_tka_on_dm_maps 0 "when this is set, all DM and KA maps automatically support TKA"
+set g_tka_on_ka_maps 1 "when this is set, all KA maps automatically support TKA"
+set g_tka_on_tdm_maps 0 "when this is set, all TDM maps automatically support TKA"
 set g_tka_teams 2 "how many teams are in team keepaway (set by mapinfo)"
 set g_tka_team_spawns 0 "when 1, players spawn from the team spawnpoints of the map, if any"
 set g_tka_teams_override 0	"how many teams are in team keepaway"
