Now spawned vehicles from nades cannot be respawned after being deleted, no more count limits thanks to the no respawn option, and add correctly cl_tandemnade_type due to several changes when merging master branch

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -207,6 +207,7 @@ set g_nades_nade_type 1 "Type of the off-hand grenade. 1:normal 2:napalm 3:ice 4
 seta cl_nade_timer 1 "show a visual timer for nades, 1 = only circle, 2 = circle with text"
 seta cl_nade_type 3
 seta cl_pokenade_type "zombie"
+seta cl_tandemnade_type 0
 
 // ------------
 //  Nade bonus
