update notifications.cfg for battle royale

--- a/notifications.cfg
+++ b/notifications.cfg
@@ -93,7 +93,10 @@ seta notification_ANNCE_VOTE_ACCEPT "2" "0 = disabled, 1 = enabled if gentle mod
 seta notification_ANNCE_VOTE_CALL "2" "0 = disabled, 1 = enabled if gentle mode is off, 2 = always enabled"
 seta notification_ANNCE_VOTE_FAIL "2" "0 = disabled, 1 = enabled if gentle mode is off, 2 = always enabled"
 
-// MSG_INFO notifications (count = 334):
+// MSG_INFO notifications (count = 339):
+seta notification_INFO_BR_DOWN "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_BR_DOWN_SELF "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_BR_REVIVED "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_CA_JOIN_LATE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_CA_LEAVE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_CHAT_NOSPECTATORS "2" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -134,6 +137,7 @@ seta notification_INFO_DEATH_MURDER_NADE_HEAL "1" "0 = off, 1 = print to console
 seta notification_INFO_DEATH_MURDER_NADE_ICE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE_ICE_FREEZE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_NADE_NAPALM "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_MURDER_RING "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_SHOOTING_STAR "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_SLIME "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_MURDER_SWAMP "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -176,6 +180,7 @@ seta notification_INFO_DEATH_SELF_NADE_ICE "1" "0 = off, 1 = print to console, 2
 seta notification_INFO_DEATH_SELF_NADE_ICE_FREEZE "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NADE_NAPALM "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_NOAMMO "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
+seta notification_INFO_DEATH_SELF_RING "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_ROT "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_SHOOTING_STAR "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_DEATH_SELF_SLIME "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
@@ -342,11 +347,24 @@ seta notification_INFO_WEAPON_TUBA_SUICIDE "1" "0 = off, 1 = print to console, 2
 seta notification_INFO_WEAPON_VAPORIZER_MURDER "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 seta notification_INFO_WEAPON_VORTEX_MURDER "1" "0 = off, 1 = print to console, 2 = print to console and chatbox (if notification_allow_chatboxprint is enabled)"
 
-// MSG_CENTER notifications (count = 241):
+// MSG_CENTER notifications (count = 255):
 seta notification_CENTER_ALONE "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_ASSAULT_ATTACKING "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_ASSAULT_DEFENDING "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_ASSAULT_OBJ_DESTROYED "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DEAD_SQUAD "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DOWN "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DOWN_SELF "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DOWN_WAIT "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DROPSHIP "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_DROP_DETACH "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_FORFEIT "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_JOIN_DEAD "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_JOIN_LATE "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_REVIVE "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_REVIVED "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_RING_CLOSE "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_BR_RING_WARN "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_CAMPCHECK "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_COINTOSS "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_COUNTDOWN_BEGIN "1" "0 = off, 1 = centerprint"
@@ -417,6 +435,7 @@ seta notification_CENTER_DEATH_SELF_NADE_HEAL "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_NADE_ICE_FREEZE "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_NADE_NAPALM "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_NOAMMO "1" "0 = off, 1 = centerprint"
+seta notification_CENTER_DEATH_SELF_RING "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_ROT "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_SHOOTING_STAR "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_DEATH_SELF_SLIME "1" "0 = off, 1 = centerprint"
@@ -537,7 +556,7 @@ seta notification_CENTER_VEHICLE_STEAL "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_VEHICLE_STEAL_SELF "1" "0 = off, 1 = centerprint"
 seta notification_CENTER_WEAPON_MINELAYER_LIMIT "1" "0 = off, 1 = centerprint"
 
-// MSG_MULTI notifications (count = 156):
+// MSG_MULTI notifications (count = 158):
 seta notification_DEATH_MURDER_BUFF "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_CHEAT "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_DROWN "1" "Enable this multiple notification"
@@ -550,6 +569,7 @@ seta notification_DEATH_MURDER_NADE_HEAL "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_ICE "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_ICE_FREEZE "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_NADE_NAPALM "1" "Enable this multiple notification"
+seta notification_DEATH_MURDER_RING "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_SHOOTING_STAR "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_SLIME "1" "Enable this multiple notification"
 seta notification_DEATH_MURDER_SWAMP "1" "Enable this multiple notification"
@@ -592,6 +612,7 @@ seta notification_DEATH_SELF_NADE_ICE "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_NADE_ICE_FREEZE "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_NADE_NAPALM "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_NOAMMO "1" "Enable this multiple notification"
+seta notification_DEATH_SELF_RING "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_ROT "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_SHOOTING_STAR "1" "Enable this multiple notification"
 seta notification_DEATH_SELF_SLIME "1" "Enable this multiple notification"
@@ -746,4 +767,4 @@ seta notification_show_sprees_info "3" "Show spree information in MSG_INFO messa
 seta notification_show_sprees_info_newline "1" "Show attacker spree information for MSG_INFO messages on a separate line than the death notification itself"
 seta notification_show_sprees_info_specialonly "1" "Don't show attacker spree information in MSG_INFO messages if it isn't an achievement"
 
-// Notification counts (total = 839): MSG_ANNCE = 80, MSG_INFO = 334, MSG_CENTER = 241, MSG_MULTI = 156, MSG_CHOICE = 28
+// Notification counts (total = 860): MSG_ANNCE = 80, MSG_INFO = 339, MSG_CENTER = 255, MSG_MULTI = 158, MSG_CHOICE = 28
