Add cvar cl_welcome to control if Welcome dialog appears automatically
Replaces cvar cl_welcome_in_menu_dialog

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -31,6 +31,7 @@ alias +show_info1 "menu_showwelcomedialog"
 alias -show_info1 ""
 alias +show_info +show_info$_menu_welcome_dialog_available
 alias -show_info -show_info$_menu_welcome_dialog_available
+seta cl_welcome 1 "1: show the Welcome dialog when connecting; 0: show it only when +show_info keybind is pressed"
 
 // merge lightmaps up to 2048x2048 textures
 mod_q3bsp_lightmapmergepower 4
