--- a/vehicles.cfg
+++ b/vehicles.cfg
@@ -6,6 +6,8 @@ set g_vehicles_steal 1 "allow stealing enemy vehicles in teamplay modes"
 set g_vehicles_steal_show_waypoint 1 "show a waypoint above the thief"
 set g_vehicles_delayspawn 1
 set g_vehicles_delayspawn_jitter 10
+set g_vehicles_max 10
+set g_vehicles_max_perplayer 2
 set g_vehicles_teams 1 "allow team specific vehicles"
 
 set g_vehicles_teleportable 0
