Emerald nade is replaced to monster nade, now monster nade is renamed as tandem nade, all spawn options are inside this nade! Add some cvar descriptions, engaging effects and colors. No longer confussed by entrap nade color

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -202,12 +202,12 @@ set g_nades_nade_edgedamage 90
 set g_nades_nade_radius 300
 set g_nades_nade_force 650
 set g_nades_nade_newton_style 0 "nade velocity: 0 is absolute, 1 is relative (takes into account player velocity), 2 is something in between"
-set g_nades_nade_type 1 "Type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil"
+set g_nades_nade_type 1 "Type of the off-hand grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil, 10:ammo, 11:dark"
 
 seta cl_nade_timer 1 "show a visual timer for nades, 1 = only circle, 2 = circle with text"
 seta cl_nade_type 3
-seta cl_pokenade_type "zombie"
-seta cl_tandemnade_type 0
+seta cl_pokenade_type "zombie" "monster, item, vehicle and turret to spawn"
+seta cl_tandemnade_type 0 "tandem nade selection; 0: monster, 1: item, 2: vehicle, 3: turret"
 
 // ------------
 //  Nade bonus
@@ -221,7 +221,7 @@ seta cl_tandemnade_type 0
 //
 set g_nades_bonus 0 "Enable bonus grenades"
 set g_nades_bonus_client_select 0 "Allow client side selection of bonus nade type"
-set g_nades_bonus_type 2 "Type of the bonus grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:pokenade 8:entrap 9:veil"
+set g_nades_bonus_type 2 "Type of the bonus grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:tandemnade 8:entrap 9:veil"
 set g_nades_bonus_onstrength 1 "Always give bonus grenades to players that have the strength powerup"
 set g_nades_bonus_max 3 "Maximum number of bonus grenades"
 set g_nades_bonus_only 0 "Disallow regular nades, only bonus nades can be used"
@@ -243,16 +243,16 @@ set g_nades_napalm_selfdamage 1 "Whether the player that tossed the nade can be 
 // Napalm fireballs
 set g_nades_napalm_ball_count 6 "Number of fireballs emitted during the explosion"
 set g_nades_napalm_ball_spread 500 "Maximum force which the fireballs will have on explosion"
-set g_nades_napalm_ball_damageforcescale 4
-set g_nades_napalm_ball_damage 40
-set g_nades_napalm_ball_lifetime 7
+set g_nades_napalm_ball_damageforcescale 4 "How affected fireballs are by damage"
+set g_nades_napalm_ball_damage 40 "Damage caused by the fireball"
+set g_nades_napalm_ball_lifetime 7 "How long the fireball will last"
 set g_nades_napalm_ball_radius 100 "Distance from the fireball within which you may get burned"
 // Napalm Fire fountain
 set g_nades_napalm_fountain_lifetime 3 "Time period during which extra fire mines are ejected"
 set g_nades_napalm_fountain_delay 0.5 "Delay between emissions by the fountain"
 set g_nades_napalm_fountain_damage 50 "Damage caused by the center of the fountain"
 set g_nades_napalm_fountain_edgedamage 20 "Damage caused by the edge of the fountain"
-set g_nades_napalm_fountain_radius 130
+set g_nades_napalm_fountain_radius 130 "Distance from the fountain"
 
 // Ice (3)
 set g_nades_ice_freeze_time 3 "How long the ice field will last"
@@ -269,20 +269,39 @@ set g_nades_heal_rate 30 "Health given per second"
 set g_nades_heal_friend 1 "Multiplier of health given to team mates"
 set g_nades_heal_foe   -2 "Multiplier of health given to enemies"
 
-// Pokenade (7)
+// Tandem (7)
 set g_nades_pokenade_monster_lifetime 150 "How long pokenade monster will survive"
-set g_nades_pokenade_monster_type "zombie" "Monster to spawn"
+set g_nades_pokenade_type "zombie" "Monster, item, vehicle and turret to spawn"
+set g_nades_tandemnade_type 0 "Tandem nade selection; 0: monster, 1: item, 2: vehicle, 3: turret"
+set g_nades_tandem_ball_spread 0.5 "Maximum force which the ball will have on explosion"
+set g_nades_tandem_ball_item_spawncount 10 "Number of items ball will spawn at their explosion location"
+set g_nades_tandem_ball_lifetime 1 "How long the ball will last"
+set g_nades_tandem_fountain_lifetime 1 "Time period during which fountain is ejected"
+set g_nades_tandem_fountain_delay 5 "Delay between emissions by the fountain"
+set g_nades_tandem_item_lifetime 5 "Life time of the item"
+set g_nades_tandem_item_includespecial 0 "Include jetpack and powerups"
+set g_nades_tandem_randomweapon_includespecial 0 "Include special and super weapons"
 
 // Entrap (8)
 set g_nades_entrap_strength 0.01 "Strength of the orb's movement slowing powers"
 set g_nades_entrap_speed 0.5 "Running speed while entrapped"
 set g_nades_entrap_time 10 "Life time of the orb"
-set g_nades_entrap_radius 500
+set g_nades_entrap_radius 500 "Distance from the entrap orb"
 
 // Veil (9)
 set g_nades_veil_time 8 "Life time of the orb"
-set g_nades_veil_radius 200
+set g_nades_veil_radius 200 "Distance from the veil orb"
 
+// Ammo (10)
+set g_nades_ammo_time 4 "Life time of the orb"
+set g_nades_ammo_rate 30 "Ammo given per second"
+set g_nades_ammo_friend 1 "Multiplier of ammo given to team mates"
+set g_nades_ammo_foe   -2 "Multiplier of ammo given to enemies"
+
+// Darkness (11)
+set g_nades_dark_damage 25 "How much damage dark orb can do when foes are entering inside"
+set g_nades_dark_time 13 "Life time of the orb"
+set g_nades_dark_radius 700 "Distance from the dark orb"
 
 // ============
 //  camp check
