Add lifetime for spawned vehicles and turrets, their spawn functionality is completed!

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -271,6 +271,8 @@ set g_nades_heal_foe   -2 "Multiplier of health given to enemies"
 
 // Tandem (7)
 set g_nades_pokenade_monster_lifetime 150 "How long pokenade monster will survive"
+set g_nades_pokenade_turret_lifetime 150 "How long pokenade turret will take to be in the world"
+set g_nades_pokenade_vehicle_lifetime 150 "How long pokenade vehicle will take to be in the world"
 set g_nades_pokenade_type "zombie" "Monster, item, vehicle and turret to spawn"
 set g_nades_tandemnade_type 0 "Tandem nade selection; 0: monster, 1: item, 2: vehicle, 3: turret"
 set g_nades_tandem_ball_spread 0.5 "Maximum force which the ball will have on explosion"
