--- a/commands.cfg
+++ b/commands.cfg
@@ -149,8 +149,10 @@ alias hud_save "qc_cmd_cl hud save ${* ?}"
 alias radar "qc_cmd_cl hud radar ${* ?}"
 alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
-alias scoreboard_team_selection "_scoreboard_team_selection 1"
 
+alias _menu_showteamselect1 "_scoreboard_team_selection 1"
+alias _menu_showteamselect0 "menu_showteamselect"
+alias scoreboard_team_selection "_menu_showteamselect$_scoreboard_team_selection_available"
 
 // ========================================================
 //  cmd (client-to-server command) - server/command/cmd.qc
