--- a/commands.cfg
+++ b/commands.cfg
@@ -150,6 +150,7 @@ alias radar "qc_cmd_cl hud radar ${* ?}"
 alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
 
+set _scoreboard_team_selection_available 0 // set to 1 by CSQC
 alias _menu_showteamselect1 "_scoreboard_team_selection 1"
 alias _menu_showteamselect0 "menu_showteamselect"
 alias scoreboard_team_selection "_menu_showteamselect$_scoreboard_team_selection_available"
