--- a/commands.cfg
+++ b/commands.cfg
@@ -151,9 +151,9 @@ alias scoreboard_columns_help "qc_cmd_cl hud scoreboard_columns_help"
 alias scoreboard_columns_set "qc_cmd_cl hud scoreboard_columns_set ${* ?}"
 
 set _scoreboard_team_selection_available 0 // set to 1 by CSQC
-alias _menu_showteamselect1 "_scoreboard_team_selection 1"
-alias _menu_showteamselect0 "menu_showteamselect"
-alias scoreboard_team_selection "_menu_showteamselect$_scoreboard_team_selection_available"
+alias _team_selection_show1 "_scoreboard_team_selection 1"
+alias _team_selection_show0 menu_showteamselect
+alias team_selection_show "_team_selection_show$_scoreboard_team_selection_available"
 
 // ========================================================
 //  cmd (client-to-server command) - server/command/cmd.qc
