--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -201,6 +201,7 @@ seta hud_panel_strafehud_timeout_ground "0.03333333" "time (in seconds) after la
 seta hud_panel_strafehud_timeout_turn "0.1" "time (in seconds) after releasing the strafe keys before changing mode (visually more consistent hud while switching between left/right strafe turning)"
 seta hud_panel_strafehud_antiflicker_angle "0.01" "how many degrees from 0° to 180° the hud ignores if it could cause visual disturbances otherwise (and to counter rounding errors)"
 seta hud_panel_strafehud_antiflicker_speed "0.0001" "how many qu/s the hud ignores if it could cause visual disturbances otherwise (and to counter rounding errors)"
+seta hud_panel_strafehud_fps_update "0.5" "update interval (in seconds) of the frametime to calculate the optimal angle, smaller values may cause flickering"
 
 // hud panel aliases
 alias quickmenu "cl_cmd hud quickmenu ${* ?}"
