--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -253,6 +253,7 @@ set g_ca_spectate_enemies 0 "allow eliminated players to spectate enemy players 
 set g_ca_warmup 10 "time players get to run around before the round starts"
 set g_ca_damage2score 100  "every this amount of damage done give players 1 point"
 set g_ca_round_timelimit 180 "round time limit in seconds"
+set g_ca_round_stop 0 "freeze the game after round stops" // BaI mod
 set g_ca_teams_override 0
 set g_ca_team_spawns 0 "when 1, players spawn from the team spawnpoints of the map, if any"
 set g_ca_teams 0
@@ -390,7 +391,8 @@ set g_domination_warmup 5 "time players have to wait before the round starts"
 //  freezetag
 // ===========
 set g_freezetag 0 "Freeze Tag: Freeze the opposing team(s) to win, unfreeze teammates by standing next to them"
-set g_freezetag_warmup 10 "time players get to run around before the round starts"
+// BaI mod changes this
+set g_freezetag_warmup 5 "time players get to run around before the round starts"
 set g_freezetag_point_limit -1	"Freeze Tag point limit overriding the mapinfo specified one (use 0 to play without limit, and -1 to use the mapinfo's limit)"
 set g_freezetag_point_leadlimit -1	"Freeze Tag point lead limit overriding the mapinfo specified one (use 0 to play without limit, and -1 to use the mapinfo's limit)"
 set g_freezetag_revive_speed 0.4 "Speed for reviving a frozen teammate if g_freezetag_revive_time_to_score is off"
@@ -401,17 +403,21 @@ set g_freezetag_revive_nade 1 "Enable reviving from own nade explosion"
 set g_freezetag_revive_nade_health 40 "Amount of health player has if they revived from their own nade explosion"
 set g_freezetag_revive_time_to_score 1.5 "every this amount of seconds give players reviving a frozen teammate 1 point"
 set g_freezetag_round_timelimit 360 "round time limit in seconds"
+set g_freezetag_round_stop 0 "freeze game when round ends" // BaI mod
+set g_freezetag_round_respawn 0 // BaI mod
 set g_freezetag_revive_auto 1 "automatically revive frozen players after some time (g_freezetag_frozen_maxtime)"
 set g_freezetag_revive_auto_progress 1 "start the automatic reviving progress as soon as the player gets frozen"
 set g_freezetag_revive_auto_reducible 1 "reduce auto-revival time when frozen players are hit by enemies; set to -1 to reduce it even when they are hit by teammates"
 set g_freezetag_revive_auto_reducible_forcefactor 0.01 "hit force to time reduction conversion factor"
 set g_freezetag_revive_auto_reducible_maxforce 400 "max force considered at once"
+set g_freezetag_revive_respawn 1 "respawn when reviving" // BaI mod
 set g_freezetag_revive_spawnshield 1 "apply spawnshield for this time in seconds after the player has been revived"
 set g_freezetag_frozen_maxtime 60 "frozen players will be automatically unfrozen after this time in seconds"
 set g_freezetag_teams_override 0
 set g_freezetag_team_spawns 0 "when 1, players spawn from the team spawnpoints of the map, if any"
 set g_freezetag_teams 0
-set g_freezetag_weaponarena "most_available" "starting weapons - takes the same options as g_weaponarena"
+// BaI mod changes this
+set g_freezetag_weaponarena "0" "starting weapons - takes the same options as g_weaponarena"
 
 
 // ==========
