--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -163,8 +163,7 @@ set debug_deglobalization_clear 0 "make the new wrappers set globals to NaN afte
 // disabling until it's complete
 set prvm_garbagecollection_enable 0
 
-set g_mapinfo_arena_compat 1 "allow mapinfo data to be pulled directly from .arena and .defi files if they exist, rather than generating .mapinfo files for them"
-set g_mapinfo_arena_generate 0 "allow mapinfo data to be pulled from .arena and .defi files during generation"
+set g_mapinfo_q3compat 1 "0: generate .mapinfo if none exists, ignoring .arena and .defi files. 1: read .arena and .defi files, don't generate .mapinfo. 2: generate .mapinfo if none exists using data from .arena files instead of reading them, .defi files continue to be used directly"
 
 // load console command aliases and settings
 exec commands.cfg
