Add server side cvar for tandem nade to enable/disable special items, weapons, vehicles and turrets (disabled by default)

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -281,7 +281,8 @@ set g_nades_tandem_ball_lifetime 1 "How long the ball will last"
 set g_nades_tandem_fountain_lifetime 1 "Time period during which fountain is ejected"
 set g_nades_tandem_fountain_delay 5 "Delay between emissions by the fountain"
 set g_nades_tandem_item_lifetime 5 "Life time of the item"
-set g_nades_tandem_item_includespecial 0 "Include jetpack and powerups"
+set g_nades_tandem_includespecial 0 "Include weapons, monsters, vehicles and turrets"
+set g_nades_tandem_item_includespecial 0 "Include ammo, jetpack and powerups"
 set g_nades_tandem_randomweapon_includespecial 0 "Include special and super weapons"
 
 // Entrap (8)
