Add server side bool cvars to handle nade balance for admin purposes

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -237,6 +237,7 @@ set g_nades_bonus_score_time   -1 "Bonus nade score given per second (negative t
 set g_nades_bonus_score_time_flagcarrier 2 "Bonus nade score given per second as flag carrier (negative to have the score decay)"
 
 // Napalm (2)
+set g_nades_napalm 0 "Napalm nade: spreads fire balls around the fountain and burns for a while"
 set g_nades_napalm_blast 1 "Whether the napalm grenades also give damage with the usual grenade explosion"
 set g_nades_napalm_burntime 0.5 "Time that the fire from napalm will stick to the player"
 set g_nades_napalm_selfdamage 1 "Whether the player that tossed the nade can be harmed by its fire"
@@ -255,21 +256,25 @@ set g_nades_napalm_fountain_edgedamage 20 "Damage caused by the edge of the foun
 set g_nades_napalm_fountain_radius 130 "Distance from the fountain"
 
 // Ice (3)
+set g_nades_ice 0 "Ice nade: freezes and reduces health"
 set g_nades_ice_freeze_time 3 "How long the ice field will last"
 set g_nades_ice_health      0 "How much health the player will have after being unfrozen"
 set g_nades_ice_explode     0 "Whether the ice nade should explode again once the ice field dissipated"
 set g_nades_ice_teamcheck   0 "Don't freeze teammates"
 
 // Spawn (5)
+set g_nades_spawntype 0 "Spawn nade: respawns into nade explosion location after being fragged"
 set g_nades_spawn_count 3 "Number of times player will spawn at their spawn nade explosion location"
 
 // Heal (6)
+set g_nades_heal 0 "Heal nade: spawns a orb to recover health inside, enemies take the reverse effect when being inside orb"
 set g_nades_heal_time 5 "How long the healing field will last"
 set g_nades_heal_rate 30 "Health given per second"
 set g_nades_heal_friend 1 "Multiplier of health given to team mates"
 set g_nades_heal_foe   -2 "Multiplier of health given to enemies"
 
 // Tandem (7)
+set g_nades_tandem 0 "Tandem nade: spawns items, monsters, vehicles and turrets into the explosion nade location"
 set g_nades_pokenade_monster_lifetime 150 "How long pokenade monster will survive"
 set g_nades_pokenade_turret_lifetime 150 "How long pokenade turret will take to be in the world"
 set g_nades_pokenade_vehicle_lifetime 150 "How long pokenade vehicle will take to be in the world"
@@ -286,22 +291,26 @@ set g_nades_tandem_item_includespecial 0 "Include ammo, jetpack and powerups"
 set g_nades_tandem_randomweapon_includespecial 0 "Include special and super weapons"
 
 // Entrap (8)
+set g_nades_entrap 0 "Entrap nade: spawns a orb to slow down movements inside"
 set g_nades_entrap_strength 0.01 "Strength of the orb's movement slowing powers"
 set g_nades_entrap_speed 0.5 "Running speed while entrapped"
 set g_nades_entrap_time 10 "Life time of the orb"
 set g_nades_entrap_radius 500 "Distance from the entrap orb"
 
 // Veil (9)
+set g_nades_veil 0 "Veil nade: spawns a orb to turn invisible inside"
 set g_nades_veil_time 8 "Life time of the orb"
 set g_nades_veil_radius 200 "Distance from the veil orb"
 
 // Ammo (10)
+set g_nades_ammo 0 "Ammo nade: spawns a orb to recover ammo inside, enemies take the reverse effect when being inside orb"
 set g_nades_ammo_time 4 "Life time of the orb"
 set g_nades_ammo_rate 30 "Ammo given per second"
 set g_nades_ammo_friend 1 "Multiplier of ammo given to team mates"
 set g_nades_ammo_foe   -2 "Multiplier of ammo given to enemies"
 
 // Darkness (11)
+set g_nades_dark 0 "Darkness nade: spawns a orb to blind enemies inside"
 set g_nades_dark_damage 25 "How much damage dark orb can do when foes are entering inside"
 set g_nades_dark_time 13 "Life time of the orb"
 set g_nades_dark_radius 700 "Distance from the dark orb"
