Add description on g_nades_translocate cvar

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -262,6 +262,9 @@ set g_nades_ice_health      0 "How much health the player will have after being 
 set g_nades_ice_explode     0 "Whether the ice nade should explode again once the ice field dissipated"
 set g_nades_ice_teamcheck   0 "Don't freeze teammates"
 
+// Translocate (4)
+set g_nades_translocate 0 "Translocate nade: teleports into explosion nade location"
+
 // Spawn (5)
 set g_nades_spawntype 0 "Spawn nade: respawns into nade explosion location after being fragged"
 set g_nades_spawn_count 3 "Number of times player will spawn at their spawn nade explosion location"
