Add more description in g_nades_bonus_type cvar

--- a/mutators.cfg
+++ b/mutators.cfg
@@ -221,7 +221,7 @@ seta cl_tandemnade_type 0 "tandem nade selection; 0: monster, 1: item, 2: vehicl
 //
 set g_nades_bonus 0 "Enable bonus grenades"
 set g_nades_bonus_client_select 0 "Allow client side selection of bonus nade type"
-set g_nades_bonus_type 2 "Type of the bonus grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:tandemnade 8:entrap 9:veil"
+set g_nades_bonus_type 2 "Type of the bonus grenade. 1:normal 2:napalm 3:ice 4:translocate 5:spawn 6:heal 7:tandemnade 8:entrap 9:veil 10:ammo 11:darkness"
 set g_nades_bonus_onstrength 1 "Always give bonus grenades to players that have the strength powerup"
 set g_nades_bonus_max 3 "Maximum number of bonus grenades"
 set g_nades_bonus_only 0 "Disallow regular nades, only bonus nades can be used"
