Add menu_gamemenu client cvar for the in-game menu

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -870,6 +870,9 @@ scr_loadingscreen_scale 999
 scr_loadingscreen_scale_base 1
 scr_loadingscreen_scale_limit 2
 
+// in-game menu
+seta menu_gamemenu 1 "1: show in-game menu when esc is pressed; 0: show main menu when esc is pressed"
+
 // other config files
 exec effects-normal.cfg
 exec crosshairs.cfg
